--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,278 +1,419 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+.HomeSection {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.HomeContainer {
+    width: 90%;
 }
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+
+/* HERO SECTION */
+
+.HeroSection {
+    height: 100vh;
+    display: flex;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.HeroText {
+    display: flex;
+    flex-direction: column;
+    height: 97%;
+    gap: 20px;
+    width: 100%;
+    z-index: 1000;
+    background-color: transparent;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.HeroTextContainer {
+    background-color: transparent;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+.HeroBigText {
+    display: flex;
+    flex-direction: column;
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 59px;
+    line-height: 81px;
+    letter-spacing: -0.05em;
+    color: #ffffff;
+    background-color: transparent;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.HeroBigText span:nth-child(1) {
+    background-color: transparent;
 }
 
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
+.HeroBigText span:nth-child(2) {
+    padding-left: 35px;
+    background-color: transparent;
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
+.HeroBigText span:nth-child(3) {
+    padding-left: 100px;
+    background-color: transparent;
 }
 
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo,
-.thirteen {
-  position: relative;
-}
-
-.thirteen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
-}
-
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
-}
-
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
+.HeroSmallText {
     display: flex;
     justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
+    background-color: transparent;
+}
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
+.HeroSmallText p {
+    width: 212px;
+    height: 60px;
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    color: #ffffff;
+    background-color: transparent;
+}
 
-  .description div {
+.HeroSmallBottomText {
+    display: flex;
     align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
+    justify-content: center;
+    height: 100%;
+    background-color: transparent;
+}
+
+.HeroSmallBottomText p {
+    width: 227px;
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    color: #ffffff;
+    background-color: transparent;
+}
+
+.HeroSectionCenterImage {
+    position: relative;
+    width: 595px;
+    height: 400px;
+}
+
+.HeroSectionCenterImage img {
+    position: absolute;
+    right: 70px;
+}
+
+.HeroSectionSideImageContainer {
+    width: 50%;
+    position: relative;
+}
+
+.HeroSectionSideImageContainer p {
+    z-index: 1000000;
+    width: 241px;
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    color: #ffffff;
+    position: relative;
+    background-color: transparent;
+}
+
+.HeroSectionSideImage {
+    height: 345px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.HeroSectionSideImage img {
+    height: 345px;
+    position: absolute;
+    top: 30px;
     z-index: 1;
-  }
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+
+/* NEW COLLECTION SECTION */
+
+.newCollectionSection {
+    height: 100%;
+    padding-top: 200px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.newCollectionContainer {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding-bottom: 200px;
+    border-bottom: 1px solid white;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.newCollectionHeader {
+    display: flex;
+    gap: 240px;
+    align-items: center;
+}
+
+.newCollectionHeader span:nth-child(1) {
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 70px;
+    line-height: 96px;
+    /* identical to box height */
+    letter-spacing: -0.05em;
+    color: #ffffff;
+}
+
+.newCollectionHeader span:nth-child(2) {
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 168px;
+    line-height: 229px;
+    letter-spacing: -0.05em;
+    color: rgba(229, 229, 229, 0.09);
+}
+
+.newCollectionHeader span:nth-child(3) {
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 70px;
+    line-height: 96px;
+    /* identical to box height */
+    letter-spacing: -0.05em;
+    color: #ffffff;
+}
+
+.newCollectionMain {
+    display: flex;
+    justify-content: center;
+}
+
+.newCollectionSidebar {
+    position: absolute;
+    top: 160px;
+    left: 0;
+    background-color: transparent;
+}
+
+.newCollectionSidebar ul {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    background-color: transparent;
+}
+
+.newCollectionSidebar ul li {
+    list-style: none;
+    background-color: transparent;
+}
+
+.newCollectionSidebar ul li a {
+    background-color: transparent;
+}
+
+.newCollectionCenter {
+    width: 1059px;
+    height: 471px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(".././public/newCollection.png");
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+}
+
+.newCollectionCenter p {
+    width: 928px;
+    height: 51px;
+    background-color: transparent;
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 37px;
+    line-height: 51px;
+    /* identical to box height */
+    letter-spacing: -0.01em;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.newCollectionSideText {
+    width: 203px;
+    height: 64px;
+    right: 70px;
+    top: 300px;
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    color: #ffffff;
+    position: absolute;
+    background-color: transparent;
+}
+
+
+/* UNLEASH SECTION */
+
+.unleashSection {
+    height: 100%;
+    width: 100%;
+}
+
+.unleashContainer {
+    height: 90%;
+    width: 100%;
+    border-bottom: 2px solid white;
+    padding-bottom: 150px;
+    padding-top: 30px;
+}
+
+.unleashTopText {
+    display: flex;
+    justify-content: end;
+    width: 100%;
+}
+
+.unleashTopText p {
+    width: 379px;
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: right;
+    color: #ffffff;
+}
+
+.unleashMain {
+    display: flex;
+    flex-direction: column;
+    gap: 85px;
+}
+
+.unleashMainFirst {
+    display: flex;
+    align-items: center;
+    gap: 100px;
+}
+
+.unleashTEXT {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 105px;
+    line-height: 143px;
+    letter-spacing: -0.05em;
+    color: #FFFFFF;
+}
+
+.unleashTEXT span:nth-child(1) {
+    padding-left: 20px;
+}
+
+.unleashTEXT span:nth-child(2) {
+    padding-left: 170px;
+}
+
+.unleashMainSecond {
+    height: 100%;
+}
+
+.unleashImgTwoContainer {
+    display: flex;
+    padding-left: 70px;
+    width: 45%;
+    justify-content: space-between;
+}
+
+.unleashImgTwo {
+    display: flex;
+    align-items: end;
+    position: relative;
+}
+
+.unleashImgTwo p {
+    position: absolute;
+    width: 203px;
+    height: 32px;
+    bottom: 70px;
+    right: -155px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    color: #FFFFFF;
+    background-color: transparent;
+}
+
+.unleashShopContainer p {
+    text-align: center;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 41px;
+    /* identical to box height */
+    color: #FFFFFF;
+}
+
+.unleashShop {
+    height: 95px;
+    width: 95px;
+    border: 2px solid #fff;
+    display: grid;
+    place-content: center;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    font-size: 50px;
+}
+
+.unleashShop span {
+    background-color: transparent;
+    display: grid;
+    place-content: center;
+    cursor: pointer;
+    transition: all 1.5s ease;
+    animation-fill-mode: forwards;
+    -webkit-transition: all 1.5s ease;
+    -moz-transition: all 1.5s ease;
+    -ms-transition: all 1.5s ease;
+    -o-transition: all 1.5s ease;
+}
+
+.unleashShop span:hover {
+    animation: arrow 1.5s alternate infinite;
+    -webkit-animation: arrow 1.5s alternate infinite;
+}
+
+@keyframes arrow {
+    from {
+        transform: translate(0px);
+        -webkit-transform: translate(0px);
+        -moz-transform: translate(0px);
+        -ms-transform: translate(0px);
+        -o-transform: translate(0px);
+    }
+    to {
+        transform: translate(8px, -8px);
+        -webkit-transform: translate(8px, -8px);
+        -moz-transform: translate(8px, -8px);
+        -ms-transform: translate(8px, -8px);
+        -o-transform: translate(8px, -8px);
+    }
 }
