--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,337 @@
     color: white;
 }
 
+
+/* Hide the default scrollbar */
+
+::-webkit-scrollbar {
+    width: 8px;
+    background-color: transparent;
+}
+
+
+/* Style the scrollbar track */
+
+ ::-webkit-scrollbar-track {
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+
+/* Style the scrollbar thumb */
+
+ ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #cccccc27;
+    height: 5px;
+    /* Adjust the height as desired */
+    transition: 0.7s;
+    -webkit-transition: 0.7s;
+    -moz-transition: 0.7s;
+    -ms-transition: 0.7s;
+    -o-transition: 0.7s;
+}
+
+
+/* Style the scrollbar thumb when hovered */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background-color: white;
+    transition: 0.7s;
+    -webkit-transition: 0.7s;
+    -moz-transition: 0.7s;
+    -ms-transition: 0.7s;
+    -o-transition: 0.7s;
+}
+
+.navContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 100px 50px 100px;
+    position: relative;
+}
+
+.navLogo {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 31px;
+    letter-spacing: -0.04em;
+    color: #FFFFFF;
+}
+
+.navLogo a {
+    text-decoration: none;
+}
+
+.navLink {
+    display: flex;
+    gap: 50px;
+}
+
+.navLinkP {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+    text-transform: capitalize;
+    color: white;
+}
+
+.navExtra {
+    display: flex;
+    gap: 20px;
+}
+
+.navExtraP {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+    color: #fff;
+}
+
+
+/* Add the styles for the BsHandbag icon if necessary */
+
 #handbag {
     color: white;
     font-size: x-large;
+}
+
+.bigImg {
+    width: 375px;
+    height: 540px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.category-item {
+    cursor: pointer;
+    margin-bottom: 5px;
+}
+
+.category-item.active {
+    border: 2px solid white;
+}
+
+.gender {
+    border-bottom: 2px solid #dadada;
+    height: 60px;
+    display: flex;
+    gap: 10px;
+}
+
+.gender button {
+    padding: 10px;
+    gap: 10px;
+    width: 113px;
+    height: 45px;
+    left: 180px;
+    top: 267px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    /* identical to box height */
+    color: #FFFFFF;
+    border: none;
+}
+
+.gender button.active {
+    border: 2px solid white;
+}
+
+.product-list {
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+    justify-content: space-between;
+    border-bottom: 2px solid #dadada;
+}
+
+.product-list ul {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.product-list li {
+    padding: 10px;
+    gap: 10px;
+    width: 113px;
+    height: 45px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    color: #FFFFFF;
+    border: none;
+    list-style: none;
+    display: grid;
+    place-items: center;
+}
+
+.product-list button {
+    border: none;
+    font-size: x-large;
+}
+
+.product {
+    text-decoration: none;
+}
+
+.product .small {
+    /* Styles for small-sized products */
+    height: 453px;
+    width: 290px;
+}
+
+.product .long {
+    /* Styles for small-sized products */
+    height: 450px;
+    width: 290px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.product .large {
+    /* Styles for large-sized products */
+    height: 712px;
+    width: 454.48px;
+}
+
+.bold {
+    /* Styles for products with bold style */
+}
+
+.italic {
+    /* Styles for products with italic style */
+}
+
+.productText {
+    display: flex;
+    align-items: center;
+    height: 35%;
+}
+
+.productText p {
+    width: 355px;
+    height: 176px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 44px;
+    color: #FFFFFF;
+}
+
+.productImage .small {
+    width: 290px;
+    height: 425px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.productImage .long {
+    width: 290px;
+    height: 388px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.productImage .large {
+    width: 457px;
+    height: 685px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.productImageContainer .small {
+    width: 290px;
+    height: 425px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.productImageContainer .long {
+    width: 290px;
+    height: 388px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
+.productImageContainer .large {
+    width: 457px;
+    height: 685px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.productNameContainer {
+    padding: 10px 0;
+    width: 90%;
+}
+
+.productNameContainer p {
+    width: 200px;
+    height: 22px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+}
+
+.productPriceContainer {
+    display: flex;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+    width: inherit;
+}
+
+.productPriceContainer p {
+    height: 22px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+}
+
+.productPriceContainer button {
+    height: 20px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    color: #FFFFFF;
+    border: none;
+    border-bottom: 1px solid white;
+    cursor: pointer;
+}
+
+.active {
+    border: 1px solid white;
 }
