--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,11 +97,30 @@
 }
 
 .navExtraP {
+    position: relative;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 20px;
     color: #fff;
+}
+
+.navExtraP span {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 13px;
+    background-color: rgba(255, 255, 255, 0.847);
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: grid;
+    place-items: center;
+    color: black;
 }
 
 
