--- a/styles/cart.module.css
+++ b/styles/cart.module.css
@@ -115,12 +115,176 @@
 
 .CartFooterContainer {
     display: flex;
-    border: 1px solid red;
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    padding: 100px 0 200px 0;
 }
 
 .PromoContainer {
     border: 1px solid white;
+    width: 447px;
+    height: 47px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.PromoContainer input {
+    width: 350px;
+    height: 47px;
+    border: none;
+    background-color: transparent;
+    outline: none;
+    padding-left: 50px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+}
+
+.PromoContainer input::placeholder {
+    color: white;
+}
+
+.PromoContainer button {
+    width: 95px;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    text-decoration: underline;
+    border-left: 2px solid white;
+    font-size: 15px;
+}
+
+.CartTotalContainer {
+    width: 280px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.CartTotal {
+    display: flex;
+    gap: 10px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 27px;
+    color: #ABABAB;
+    align-items: center;
+}
+
+.CartTotal p {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 34px;
+    color: #FFFFFF;
+}
+
+.CartTotalContainer button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 9px 29px;
+    gap: 10px;
+    width: 116px;
+    background: #FFFFFF;
+    color: black;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    transition: ease-out 0.4s;
+    -webkit-transition: ease-out 0.4s;
+    -moz-transition: ease-out 0.4s;
+    -ms-transition: ease-out 0.4s;
+    -o-transition: ease-out 0.4s;
+    cursor: pointer;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    color: #000000;
+    border: none;
+}
+
+.CartTotalContainer button:hover {
+    background: #ffffffad;
+    color: white;
+    transition: ease-in 0.4s;
+    -webkit-transition: ease-in 0.4s;
+    -moz-transition: ease-in 0.4s;
+    -ms-transition: ease-in 0.4s;
+    -o-transition: ease-in 0.4s;
+}
+
+.SuccessSection {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.SuccessContainer {
+    width: 90%;
+    height: 100%;
+    padding: 50px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.SuccessInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.SuccessInfo p:nth-child(1) {
+    width: 456px;
+    height: 204px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 68px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.SuccessInfo p:nth-child(2) {
+    width: 341px;
+    height: 22px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.SuccessInfo a {
+    height: 20px;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    color: #FFFFFF;
+    text-decoration: none;
+    border-bottom: 1px solid white;
+}
+
+.SuccessImageContainer img {
+    object-fit: contain;
 }
