--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -103,6 +103,8 @@
     .HeroSectionCenterImage img {
         position: absolute;
         right: 70px;
+        width: 592px;
+        height: 739px;
     }
     
     .HeroSectionSideImageContainer {
@@ -141,6 +143,7 @@
     .newCollectionSection {
         height: 100%;
         padding-top: 200px;
+        width: 100%;
     }
     
     .newCollectionContainer {
@@ -429,6 +432,7 @@
         z-index: 0;
         cursor: pointer;
     }
+    /* DIOR SECTION */
     
     .DiorSection {
         height: 100%;
@@ -972,4 +976,447 @@
         border: none;
         border-bottom: 1px solid white;
         cursor: pointer;
+    }
+    /* CSS rules for screens with a maximum width of 600 pixels */
+    
+    @media (max-width: 600px) {
+        /* CSS rules for screens up to 600 pixels wide */
+        .HeroSection {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            padding-bottom: 20px;
+        }
+        .HeroText {
+            width: 100%;
+        }
+        .HeroTextContainer {
+            display: flex;
+            flex-direction: column-reverse;
+            width: 100%;
+            gap: 30px;
+            padding-bottom: 50px;
+        }
+        .HeroMobileText {
+            display: flex;
+            justify-content: end;
+            width: 100%;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 16px;
+            color: #FFFFFF;
+        }
+        .HeroMobileText p {
+            width: 241px;
+            height: 48px;
+        }
+        .HeroBigText {
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 41px;
+            line-height: 56px;
+            /* identical to box height */
+            letter-spacing: -0.05em;
+            color: #FFFFFF;
+            width: 100%;
+        }
+        .HeroBigText span:nth-child(1) {
+            background-color: transparent;
+            width: 297px;
+            height: 56px;
+        }
+        .HeroBigText span:nth-child(2) {
+            padding-left: 35px;
+            background-color: transparent;
+            width: 319px;
+            height: 56px;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 35px;
+            line-height: 56px;
+            letter-spacing: -0.05em;
+            color: #FFFFFF;
+        }
+        .HeroBigText span:nth-child(3) {
+            padding-left: 80px;
+            background-color: transparent;
+            width: 143px;
+            height: 56px;
+            font-weight: 400;
+            font-size: 35px;
+        }
+        .HeroSmallText {
+            display: flex;
+            justify-content: start;
+            background-color: transparent;
+            padding-left: 15px;
+        }
+        .HeroSmallText p {
+            width: 212px;
+            height: 48px;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 16px;
+            color: #FFFFFF;
+        }
+        .HeroSmallBottomText {
+            display: none;
+        }
+        .HeroText {
+            display: flex;
+            flex-direction: column;
+            height: unset;
+            gap: 20px;
+            width: 100%;
+            z-index: 1000;
+            background-color: transparent;
+        }
+        .HeroSectionCenterImage {
+            position: relative;
+            width: 100%;
+            height: 383px;
+        }
+        .HeroSectionCenterImage img {
+            position: unset;
+            width: 100%;
+            height: 383px;
+        }
+        .HeroSectionSideImageContainer {
+            display: none;
+        }
+        /* NEW COLLECTION SECTION FOR MOBILE */
+        .newCollectionSection {
+            height: 100%;
+            padding-top: 100px;
+            width: 100%;
+            position: relative;
+        }
+        .newCollectionContainer {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            padding-bottom: 50px;
+            border-bottom: 1px solid white;
+        }
+        .newCollectionHeader {
+            display: flex;
+            gap: 0px;
+            flex-direction: column;
+            align-items: start;
+        }
+        .newCollectionHeader span:nth-child(1) {
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 46px;
+            line-height: 63px;
+            letter-spacing: -0.05em;
+            color: #FFFFFF;
+        }
+        .newCollectionHeader span:nth-child(2) {
+            display: none;
+        }
+        .newCollectionHeader span:nth-child(3) {
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 46px;
+            line-height: 63px;
+            /* identical to box height */
+            letter-spacing: -0.05em;
+            color: #FFFFFF;
+        }
+        .newCollectionMain {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        }
+        .newCollectionSidebar {
+            position: unset;
+            top: unset;
+            left: 0;
+            background-color: transparent;
+            padding-bottom: 80px;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 15px;
+            line-height: 20px;
+            color: #FFFFFF;
+        }
+        .newCollectionSidebar ul {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            background-color: transparent;
+        }
+        .newCollectionSidebar ul li {
+            list-style: none;
+            background-color: transparent;
+        }
+        .newCollectionSidebar ul li a {
+            background-color: transparent;
+        }
+        .newCollectionCenter {
+            width: 100%;
+            height: 471px;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(".././public/newCollection.png");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            flex-direction: column;
+            justify-content: baseline;
+            align-items: end;
+            padding-right: 10px;
+            object-fit: contain;
+            padding-bottom: 100px;
+        }
+        .newCollectionCenter p {
+            width: 308px;
+            height: 54px;
+            left: 66px;
+            top: 321px;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 27px;
+            letter-spacing: -0.01em;
+            color: #FFFFFF;
+        }
+        .newCollectionSideText {
+            width: 203px;
+            height: 64px;
+            left: 150px;
+            top: 70px;
+        }
+        .newCollectionSideText span {
+            display: block;
+            width: 220px;
+            height: 137px;
+            left: unset;
+            top: unset;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 100px;
+            line-height: 137px;
+            letter-spacing: -0.05em;
+            color: rgba(229, 229, 229, 0.09);
+            background-color: transparent;
+        }
+        .newCollectionSideText p {
+            width: 203px;
+            height: 64px;
+            left: unset;
+            top: unset;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 16px;
+            color: #FFFFFF;
+            position: absolute;
+            background-color: transparent;
+        }
+        /* UNLEASH FASHIONISTA SECTION */
+        .unleashSection {
+            height: 100%;
+            width: 100%;
+        }
+        .unleashContainer {
+            height: 90%;
+            width: 100%;
+            border-bottom: 2px solid white;
+            padding-bottom: 150px;
+            padding-top: 30px;
+            position: relative;
+        }
+        .unleashTopText {
+            display: flex;
+            justify-content: end;
+            width: 100%;
+            padding: 50px 0;
+        }
+        .unleashTopText p {
+            width: 337px;
+            height: 64px;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 16px;
+            text-align: right;
+            color: #FFFFFF;
+        }
+        .unleashMain {
+            display: flex;
+            flex-direction: column;
+            gap: 85px;
+        }
+        .unleashMainFirst {
+            display: flex;
+            align-items: center;
+            gap: 0px;
+            position: relative;
+            border: 1px solid red;
+        }
+        .unleashImgOne {
+            width: 212px;
+            height: 319px;
+        }
+        .unleashImgOne img {
+            width: 208px;
+            height: 293px;
+        }
+        .unleashTEXT {
+            display: flex;
+            flex-direction: column;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 65px;
+            line-height: 89px;
+            letter-spacing: -0.05em;
+            color: #FFFFFF;
+            z-index: 100000;
+            background-color: transparent;
+        }
+        .unleashTEXT span:nth-child(1) {
+            padding-left: 20px;
+        }
+        .unleashTEXT span:nth-child(2) {
+            padding-left: 170px;
+        }
+        .unleashTEXT span:nth-child(3) {
+            background-color: transparent;
+        }
+        .unleashMainSecond {
+            height: 100%;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+        }
+        .unleashImgTwoContainer {
+            display: flex;
+            padding-left: 70px;
+            width: 45%;
+            justify-content: space-between;
+        }
+        .unleashImgTwo {
+            display: flex;
+            align-items: end;
+            position: relative;
+        }
+        .unleashImgTwo p {
+            position: absolute;
+            width: 203px;
+            height: 32px;
+            bottom: 70px;
+            right: -155px;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 16px;
+            color: #FFFFFF;
+            background-color: transparent;
+        }
+        .unleashShopContainer p {
+            text-align: center;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 30px;
+            line-height: 41px;
+            /* identical to box height */
+            color: #FFFFFF;
+        }
+        .unleashShop {
+            height: 95px;
+            width: 95px;
+            border: 2px solid #fff;
+            display: grid;
+            place-content: center;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            font-size: 50px;
+        }
+        .unleashShop span {
+            background-color: transparent;
+            display: grid;
+            place-content: center;
+            cursor: pointer;
+            transition: all 1.5s ease;
+            animation-fill-mode: forwards;
+            -webkit-transition: all 1.5s ease;
+            -moz-transition: all 1.5s ease;
+            -ms-transition: all 1.5s ease;
+            -o-transition: all 1.5s ease;
+        }
+        .unleashShop span:hover {
+            animation: arrow 1.5s alternate infinite;
+            -webkit-animation: arrow 1.5s alternate infinite;
+        }
+        @keyframes arrow {
+            from {
+                transform: translate(0px);
+                -webkit-transform: translate(0px);
+                -moz-transform: translate(0px);
+                -ms-transform: translate(0px);
+                -o-transform: translate(0px);
+            }
+            to {
+                transform: translate(8px, -8px);
+                -webkit-transform: translate(8px, -8px);
+                -moz-transform: translate(8px, -8px);
+                -ms-transform: translate(8px, -8px);
+                -o-transform: translate(8px, -8px);
+            }
+        }
+        .unleashImgThree img {
+            position: absolute;
+            right: 70px;
+            bottom: 30px;
+            z-index: 0;
+            cursor: pointer;
+        }
+    }
+    /* CSS rules for screens with a minimum width of 601 pixels */
+    
+    @media (min-width: 601px) {
+        /* CSS rules for screens starting from 601 pixels wide */
+    }
+    /* CSS rules for screens with a minimum width of 901 pixels and a maximum width of 1200 pixels */
+    
+    @media (min-width: 901px) and (max-width: 1200px) {
+        /* CSS rules for screens between 901 and 1200 pixels wide */
+        .HeroMobileText {
+            display: none;
+        }
+        .newCollectionSideText span {
+            display: none;
+        }
+    }
+    /* CSS rules for screens with a minimum width of 1201 pixels */
+    
+    @media (min-width: 1201px) {
+        /* CSS rules for screens starting from 1201 pixels wide */
+        .HeroMobileText {
+            display: none;
+        }
+        .newCollectionSideText span {
+            display: none;
+        }
     }
