--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1132,11 +1132,15 @@
         position: relative;
         width: 100%;
         height: 383px;
+        display: grid;
+        place-items: center;
     }
     .HeroSectionCenterImage img {
         position: unset;
         width: 100%;
         height: 383px;
+        display: grid;
+        place-items: center;
     }
     .HeroSectionSideImageContainer {
         display: none;
@@ -1332,7 +1336,7 @@
         font-family: 'Manrope';
         font-style: normal;
         font-weight: 500;
-        font-size: 65px;
+        font-size: 58px;
         line-height: 89px;
         letter-spacing: -0.05em;
         color: #FFFFFF;
@@ -1650,7 +1654,8 @@
     .FeaturedContainer {
         height: 100%;
         width: 90%;
-        padding-top: 20px;
+        padding-top: 30px;
+        padding-bottom: 60px;
     }
     .FeaturedHeader {
         padding: 20px 0;
